load("@rules_go//go:def.bzl", "go_binary", "go_test")

# Re-export language-specific binaries
alias(
    name = "go",
    actual = "//examples/node_test/go:node_test",
    visibility = ["//visibility:public"],
)

alias(
    name = "rust",
    actual = "//examples/node_test/rust:node_test",
    visibility = ["//visibility:public"],
)

alias(
    name = "zig",
    actual = "//examples/node_test/zig:node_test",
    visibility = ["//visibility:public"],
)

# Test data files
filegroup(
    name = "configs",
    srcs = ["config.json"],
    visibility = ["//visibility:public"],
)

# Cross-language Node SDK interop test.
# Go runner binary orchestrates Go ↔ Rust (and optionally Zig) pairs.
go_test(
    name = "interop_test",
    srcs = ["interop_test.go"],
    importpath = "github.com/vibing/zgrnet/examples/node_test",
    data = [
        "//examples/node_test/go:node_test",
        "//examples/node_test/rust:node_test",
    ] + select({
        "@platforms//os:macos": ["//examples/node_test/zig:node_test"],
        "//conditions:default": [],
    }),
    tags = [
        "local",      # Needs loopback network
        "exclusive",  # Don't run in parallel (uses fixed ports)
    ],
    timeout = "long",
    visibility = ["//visibility:public"],
)
