load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Re-export language-specific binaries
alias(
    name = "go",
    actual = "//examples/proxy_test/go:proxy_test",
    visibility = ["//visibility:public"],
)

alias(
    name = "rust",
    actual = "//examples/proxy_test/rust:proxy_test",
    visibility = ["//visibility:public"],
)

alias(
    name = "zig",
    actual = "//examples/proxy_test/zig:proxy_test",
    visibility = ["//visibility:public"],
)

# Test data files
filegroup(
    name = "configs",
    srcs = ["config.json"],
    visibility = ["//visibility:public"],
)

# Cross-language proxy interop test (Go + Rust + Zig)
sh_test(
    name = "interop_test",
    srcs = ["run_bazel.sh"],
    data = [
        ":configs",
        "//examples/proxy_test/go:proxy_test",
        "//examples/proxy_test/rust:proxy_test",
        # "//examples/proxy_test/zig:proxy_test",  # Enable when Zig proxy_test is built via Bazel
    ],
    tags = [
        "local",      # Needs network access
        "exclusive",  # Don't run in parallel
        "manual",     # Run explicitly: bazel test //examples/proxy_test:interop_test
    ],
    timeout = "long",
    visibility = ["//visibility:public"],
)
