load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Re-export language-specific binaries
alias(
    name = "go",
    actual = "//examples/proxy_test/go:proxy_test",
    visibility = ["//visibility:public"],
)

alias(
    name = "rust",
    actual = "//examples/proxy_test/rust:proxy_test",
    visibility = ["//visibility:public"],
)

alias(
    name = "zig",
    actual = "//examples/proxy_test/zig:proxy_test",
    visibility = ["//visibility:public"],
)

# Test data files
filegroup(
    name = "configs",
    srcs = ["config.json"],
    visibility = ["//visibility:public"],
)

# Cross-language proxy interop test (Go + Rust + Zig)
sh_test(
    name = "interop_test",
    srcs = ["run_bazel.sh"],
    data = [
        ":configs",
        "//examples/proxy_test/go:proxy_test",
        "//examples/proxy_test/rust:proxy_test",
    ] + select({
        "@platforms//os:macos": ["//examples/proxy_test/zig:proxy_test"],
        "//conditions:default": [],
    }),
    tags = [
        "local",      # Needs loopback network
        "exclusive",  # Don't run in parallel (uses fixed ports)
    ],
    timeout = "long",
    visibility = ["//visibility:public"],
)
