load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "kcp_test",
    srcs = ["src/main.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "//rust:zgrnet",
        "@crates//:hex",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
)
