load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "lan_e2e",
    srcs = ["run.go"],
    importpath = "github.com/vibing/zgrnet/e2e/lan/go",
    visibility = ["//visibility:public"],
    tags = [
        "e2e",
        "requires-root",
        "requires-network",
    ],
    deps = [
        "//go/pkg/host",
        "//go/pkg/lan",
        "//go:noise",
        "//go/pkg/tun",
    ],
)
