load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "run",
    srcs = ["main.go"],
    importpath = "github.com/vibing/zgrnet/e2e/node_host/go",
    visibility = ["//visibility:public"],
    tags = [
        "e2e",
        "requires-root",
        "requires-network",
    ],
    deps = [
        "//go:noise",
        "//go/pkg/host",
        "//go/pkg/net",
        "//go/pkg/node",
        "//go/pkg/tun",
    ],
)
