# Zig source files for this example
filegroup(
    name = "srcs",
    srcs = glob([
        "src/**/*.zig",
    ]),
    visibility = ["//visibility:public"],
)

# KCP interop test binary
# Built from main zig/ directory (due to C dependency complexity)
# Usage: bazel build //examples/kcp_test/zig:kcp_test
alias(
    name = "kcp_test",
    actual = "//zig:kcp_test",
    visibility = ["//visibility:public"],
)
