load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "proxy_test",
    srcs = ["main.go"],
    importpath = "github.com/vibing/zgrnet/examples/proxy_test/go",
    visibility = ["//visibility:public"],
    deps = [
        "//go:noise",
        "//go/pkg/net",
        "//go/pkg/proxy",
    ],
)
