load("@rules_go//go:def.bzl", "go_binary", "go_library")

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

go_library(
    name = "e2etest_lib",
    srcs = ["main.go"],
    importpath = "github.com/vibing/zgrnet/cmd/e2etest",
    deps = [
        "@com_github_chromedp_chromedp//:chromedp",
    ],
)

go_binary(
    name = "e2etest",
    embed = [":e2etest_lib"],
    data = select({
        ":macos_arm64": ["@lightpanda_macos_arm64//file"],
        ":macos_x86_64": ["@lightpanda_macos_x86_64//file"],
        ":linux_arm64": ["@lightpanda_linux_arm64//file"],
        ":linux_x86_64": ["@lightpanda_linux_x86_64//file"],
    }),
    visibility = ["//visibility:public"],
)
